paths for poduction change

--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
 	            <ul>
 	                <li class="sidebar-brand">
 	                    <a  href="#">
-	                        <img class="logo-img" src="../img/logo-img.png" alt="">
+	                        <img class="logo-img" src="img/logo-img.png" alt="">
 	                    </a>
 	                </li>
 	                <li>
@@ -162,7 +162,7 @@
 					            </h4>
 					        <div class="row short-description">
 					            <div class="col-lg-7 col-xs-12">
-					                <img class="img-fluid" src="../img/big-news.jpg" alt="">
+					                <img class="img-fluid" src="img/big-news.jpg" alt="">
 					            </div>
 					            <div class="col-lg-5 col-xs-12 big-news__content-wrap">
 					                <ul class="big-news__description">
@@ -238,7 +238,7 @@
 					<div class="col-lg-4 col-md-6    small-news-block">
 					    <ul class="small-news__List">
 					        <li class="small-news__List-item">
-					            <img class="small-news__img" src="../../img/news-thumb-1.jpg"/>
+					            <img class="small-news__img" src="img/news-thumb-1.jpg"/>
 					        </li>
 					        <li class="small-news__List-item">
 					                <div class="small-news">
@@ -266,7 +266,7 @@
 					<div class="col-lg-4  col-md-6   small-news-block">
 					    <ul class="small-news__List">
 					        <li class="small-news__List-item">
-					            <img class="small-news__img" src="../../img/news-thumb-2.jpg"/>
+					            <img class="small-news__img" src="img/news-thumb-2.jpg"/>
 					        </li>
 					        <li class="small-news__List-item">
 					            <div class="small-news">
@@ -294,7 +294,7 @@
 					<div class="col-lg-4 col-md-6   small-news-block">
 					    <ul class="small-news__List">
 					        <li class="small-news__List-item">
-					            <img class="small-news__img" src="../../img/news-thumb-3.jpg"/>
+					            <img class="small-news__img" src="img/news-thumb-3.jpg"/>
 					        </li>
 					        <li class="small-news__List-item">
 					            <div class="small-news">
@@ -322,7 +322,7 @@
 					<div class="col-lg-4 col-md-6   small-news-block">
 					    <ul class="small-news__List">
 					        <li class="small-news__List-item">
-					            <img class="small-news__img" src="../../img/news-thumb-4.jpg"/>
+					            <img class="small-news__img" src="img/news-thumb-4.jpg"/>
 					        </li>
 					        <li class="small-news__List-item">
 					            <div class="small-news">
@@ -350,7 +350,7 @@
 					<div class="col-lg-4 col-md-6   small-news-block">
 					    <ul class="small-news__List">
 					        <li class="small-news__List-item">
-					            <img class="small-news__img" src="../../img/news-thumb-5.jpg"/>
+					            <img class="small-news__img" src="img/news-thumb-5.jpg"/>
 					        </li>
 					        <li class="small-news__List-item">
 					            <div class="small-news">
@@ -378,7 +378,7 @@
 					<div class="col-lg-4 col-md-6  small-news-block">
 					    <ul class="small-news__List">
 					        <li class="small-news__List-item">
-					            <img class="small-news__img" src="../../img/news-thumb-6.jpg"/>
+					            <img class="small-news__img" src="img/news-thumb-6.jpg"/>
 					        </li>
 					        <li class="small-news__List-item">
 					            <div class="small-news">
