paths for poduction change

--- a/index.html
+++ b/index.html
@@ -213,12 +213,12 @@
 					                    </li>
 					                    <li class="big-news__social-item big-news__social-mailru">
 					                        <a href="#">
-					                            <img src="../img/mail-ru.jpg" alt=""><span>1435</span>
+					                            <img src="img/mail-ru.jpg" alt=""><span>1435</span>
 					                        </a>
 					                    </li>
 					                    <li class="big-news__social-item big-news__social-google">
 					                        <a href="#">
-					                            <img src="../img/google-plus.jpg" alt=""> <span>181</span>
+					                            <img src="img/google-plus.jpg" alt=""> <span>181</span>
 					                        </a>
 					                    </li>
 					                </ul>
